--- a/RougeLike-Task1/RougeLike-Task1/Classes/Presentation/Game.resx
+++ b/RougeLike-Task1/RougeLike-Task1/Classes/Presentation/Game.resx
@@ -117,4 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="bugLabel.Text" xml:space="preserve">
+    <value>Known bugs: 
+• If you click outside the enemy list with your mouse while its active, the form becomes unresponsive
+• In the help menu, If you click close (top right) instead of the button (bottom), the music overlaps  </value>
+  </data>
 </root>
