--- a/RougeLike-Task1/RougeLike-Task1/Classes/Presentation/Game.resx
+++ b/RougeLike-Task1/RougeLike-Task1/Classes/Presentation/Game.resx
@@ -119,7 +119,7 @@
   </resheader>
   <data name="bugLabel.Text" xml:space="preserve">
     <value>Known bugs: 
-• If you click outside the enemy list with your mouse while its active, the form becomes unresponsive
+• If you click outside a list with your mouse while its active, the form becomes unresponsive
 • In the help menu, If you click close (top right) instead of the button (bottom), the music overlaps  </value>
   </data>
 </root>
