--- a/RougeLike-Task1/RougeLike-Task1/Classes/Presentation/Game.resx
+++ b/RougeLike-Task1/RougeLike-Task1/Classes/Presentation/Game.resx
@@ -122,7 +122,6 @@
 • If you click outside a list with your mouse while its opened, the keyboard controls become unresponsive,
    just click on the selected item in that case
 • In the help menu, If you click close (top right) instead of the button (bottom), the music overlaps 
-• Enemy Movement is buggy becasue of visionArray
-• Save button does NOT work</value>
+• Save button does not work</value>
   </data>
 </root>
